增加数据库配置，并创建用户与账号实体

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-DATABASE_USER=test
-DATABASE_PASSWORD=test
+# mysql
+DATABASE_HOST=114.116.231.132
+DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=xie-360360
+DATABASE_DB=dcAdmin
+
+# Service Core
+SERVICE_CORE_HOST=localhost
+SERVICE_CORE_PORT=3001
