--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "debug": "nest start --debug --watch",
+    "debug:core": "nest start core --debug --watch",
     "start:prod": "node dist/main",
     "start:core": "nest start core",
     "start:all": "npm run start:core & npm start",
