--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "concurrently -n core,gateway \"npm run build:core\" \"npm run build:gateway\"",
+    "build:core": "nest build core",
+    "build:gateway": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "dev": "concurrently -n core,gateway \"npm run dev:core\" \"npm run dev:gateway\"",
+    "dev:core": "nest start core --watch",
+    "dev:gateway": "nest start --watch",
+    "start": "concurrently -n core,gateway \"npm run start:core\" \"npm run start:gateway\"",
+    "start:core": "nest start core",
+    "start:gateway": "nest start",
     "debug": "nest start --debug --watch",
     "debug:core": "nest start core --debug --watch",
     "start:prod": "node dist/main",
-    "start:core": "nest start core",
     "start:all": "npm run start:core & npm start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -51,6 +55,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "concurrently": "^6.3.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
