--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.0",
     "@nestjs/typeorm": "^8.0.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dayjs": "^1.10.7",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
