增加local-passport权限处理

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "concurrently -n core,gateway \"npm run start:core\" \"npm run start:gateway\"",
     "start:core": "nest start core",
     "start:gateway": "nest start",
-    "debug": "nest start --debug --watch",
+    "debug": "concurrently -n core,gateway \"npm run debug:core\" \"npm run debug:gateway\"",
+    "debug:gateway": "nest start --debug --watch",
     "debug:core": "nest start core --debug --watch",
     "start:prod": "node dist/main",
     "start:all": "npm run start:core & npm start",
