增加微服务请求代理库

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       ],
       "@app/common/*": [
         "libs/common/src/*"
+      ],
+      "@app/service-proxy": [
+        "libs/service-proxy/src"
+      ],
+      "@app/service-proxy/*": [
+        "libs/service-proxy/src/*"
       ]
     }
   }
