--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
+      "^@app/service-proxy(|/.*)$": "<rootDir>/libs/service-proxy/src/$1"
     }
   }
 }
